--- a/figmahistory/src/scss/_pages.scss
+++ b/figmahistory/src/scss/_pages.scss
@@ -289,6 +289,7 @@
 
                 @include smallScreen {
                     order: 2;
+                    @include alignHorizontalCenter;
                 }
             }
 
